<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">YiwensApp</string>
    <string name="action_settings">Settings</string>
    <string name="edit_message">edit here</string>
    <string name="button_send">send</string>
    
    <string name="title_activity_display_message">MyMessage</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_search">Search</string>

    
    <string name="action_recipe">Recipe</string>
    <string name="action_shop">Shop</string>
    <string name="action_calender">Calender</string>
    <string name="action_storage">Storage</string>
        
    
    
</resources>
