 <menu xmlns:android="http://schemas.android.com/apk/res/android"
    	xmlns:app="http://schemas.android.com/apk/res-auto">
   		  
   		  <item android:id="@+id/action_search"
          android:icon="@drawable/ic_action_search"
          android:title="@string/action_search"
          app:showAsAction="ifRoom" />
 
   		  <item android:id="@+id/action_shop"
          android:icon="@drawable/ic_action_shop"
          android:title="@string/action_shop"
          app:showAsAction="ifRoom" />
 
   		  <item android:id="@+id/action_storage"
          android:icon="@drawable/ic_action_storage"
          android:title="@string/action_storage"
          app:showAsAction="ifRoom" />
 
   		  <item android:id="@+id/action_calendar"
          android:icon="@drawable/ic_action_calendar"
          android:title="@string/action_calender"
          app:showAsAction="ifRoom" />
 
    	  <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:showAsAction="never" />
    	  
	</menu>
